src/app/operators/dialogs/csv/csv-config/csv-table/csv-table.component.scss
@import "../../../../../../wave-app-theme";

$latitudeColor: #26c5ff;
$longitudeColor: orange;
$startColor: darkgreen;
$endColor: darkviolet;
$backgroundColor: mat-color(map-get($wave-app-theme, primary));
$titleColor: white; /*Inherit from theme here.*/

div.latitudeSelector md-select /deep/ span.mat-select-placeholder {
    color: $latitudeColor;
}
div.longitudeSelector md-select /deep/ span.mat-select-placeholder {
    color: $longitudeColor;
}
div.startSelector md-select /deep/ span.mat-select-placeholder {
    color: $startColor;
}
div.endSelector md-select /deep/ span.mat-select-placeholder {
    color: $endColor;
}
div.constantSelector md-input-container /deep/ span.mat-input-placeholder {
    color: $endColor;
}
.custom md-input-container /deep/ label.mat-input-placeholder {
    color: $titleColor;
    opacity: 0.75;
}

.table-frame {
    font-size: 0;
    max-width: 75vw;
    display: inline-block;
    overflow: hidden;
    margin-left: auto;
    margin-right: auto;
    border: solid 1px darkgray;
}

.table-frame br {
    display: none;
}

.typingdiv {
    max-width: 100%;
    font-size: 15px;
    display: inline-block;
    overflow: hidden;
    border-bottom: solid 1px dimgray;
    background-color: #FFFFFF;
    font-weight: 300;
}

.headerdiv {
    max-width: 100%;
    display: inline-block;
    overflow: hidden;
    border-bottom: solid 1px dimgray;
    border-right: solid 1px dimgray;
    margin-bottom: 0;
    background-color: $backgroundColor;
    color: $titleColor;
    font-size: 15px;
    font-weight: 300;
}

.headerdiv table td.custom md-input-container {
    margin-bottom: 0px;
    padding-bottom: 0px;
    font-size: 15px;
    height: 30px;
    color: $titleColor;
}

.bodydiv {
    max-width: 100%;
    font-size: 15px;
    display: inline-block;
    overflow-x: auto;
    overflow-y: hidden;
}

.bodydiv table tr:nth-child(even) {
    background-color: #add4f4; /*Take background color and mix with white.*/
}

.resizeTable {
    display: table;
    table-layout: fixed;
}

.custom {
    font-weight: normal;
    padding-bottom: 0px;
    margin-bottom: 0px;
}

.scrollbar-measure {
    width: 100px;
    height: 100px;
    overflow: scroll;
    position: absolute;
    top: -9999px;
}

.time_green {
    border: solid $startColor;
    border-radius: 5px;
    text-align: center;
    margin-top: 3px;
    margin-bottom: 3px;
    horiz-align: center;
}

.time_violet {
    border: solid $endColor;
    border-radius: 5px;
    text-align: center;
    margin-top: 3px;
    margin-bottom: 3px;
    horiz-align: center;
}

.coordinate_orange {
    border: solid $longitudeColor;
    border-radius: 5px;
    text-align: center;
    margin-top: 3px;
    margin-bottom: 3px;
    horiz-align: center;
}

.coordinate_blue {
    border: solid $latitudeColor;
    border-radius: 5px;
    text-align: center;
    margin-top: 3px;
    margin-bottom: 3px;
    horiz-align: center;
}

/**Column Colors*/
td.orange{
    border-left-style: solid;
    border-right-style: solid;
    border-color: $longitudeColor;
}
td.blue {
    border-left-style:solid;
    border-right-style:solid;
    border-color: $latitudeColor;
}
td.green{
    border-left-style: solid;
    border-right-style: solid;
    border-color:$startColor;
}
td.violet {
    border-left-style:solid;
    border-right-style:solid;
    border-color:$endColor;
}
.orangeHead {
    border-left-style:solid;
    border-right-style:solid;
    border-top-style:solid;
    border-color:$longitudeColor;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}
.blueHead {
    border-left-style:solid;
    border-right-style:solid;
    border-top-style:solid;
    border-color:$latitudeColor;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}
.greenHead {
    border-left-style:solid;
    border-right-style:solid;
    border-top-style:solid;
    border-color:$startColor;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}
.violetHead {
    border-left-style:solid;
    border-right-style:solid;
    border-top-style:solid;
    border-color:$endColor;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

